--- a/app/components/nav/nav.edit_network.html
+++ b/app/components/nav/nav.edit_network.html
@@ -29,8 +29,8 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" ng-click="edit.cancel()">Cancel</button>
-        <button type="button" class="btn btn-danger pull-left" ng-click="edit.deleteCommunity()" ng-show="edit.update">Delete {{edit.communityForm.name || 'Network'}}</button>
-        <button type="button" class="btn btn-primary" ng-click="edit.editCommunity()">
+        <button ladda="news.working" class="ladda-button btn btn-danger pull-left" data-style="zoom-in" data-spinner-size="25" ng-click="edit.deleteCommunity()" ng-show="edit.update">Delete {{edit.communityForm.name || 'Network'}}</button>
+        <button ladda="news.working" class="ladda-button btn btn-primary" data-style="zoom-in" data-spinner-size="25" ng-click="edit.editCommunity()">
             <span ng-show="!edit.update">Create</span><span ng-show="edit.update">Update</span> {{edit.communityForm.name || 'Network'}}
             <div loading-bars ng-show="edit.working" style="padding-top: 5px; display: inline;"></div>
         </button>
