working on add resource

--- a/app/components/header/header_small.html
+++ b/app/components/header/header_small.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="pull-right" ng-if="nav.user && (nav.state.current.name == 'resource.list')" style="padding-top: 6px; margin-right: 8px;">
-                <button class="btn btn-sm btn-success" ng-click="nav.addResource()" style="font-size: 12px; color: #fff;">Add Resource</button>
+                <button class="btn btn-sm btn-success" ui-sref="resource.add" style="font-size: 12px; color: #fff;">Add Resource</button>
             </div>
         </div>
     </div>
