--- a/app/less/various.less
+++ b/app/less/various.less
@@ -5,6 +5,17 @@
   font-size: 25px;
 }
 
+.w400 {
+  font-weight: 400 !important;
+}
+
+.note-editor {
+  position: relative;
+  border: 1px solid @border-color !important;
+  border-radius: 4px;
+  padding: 10px;
+}
+
 .small-column-title {
   float:right;
   white-space:nowrap;
@@ -216,7 +227,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   padding-left: 15px;
 }
 
-#uploader_text:hover {
+.uploader_text:hover {
   text-decoration: underline;
   cursor: pointer;
 }
@@ -243,11 +254,12 @@ input.input-md, input.input-md:focus{
 
 .industry_select input.ui-select-search.input-xs {
   font-size: 20px;
+  font-weight: 200;
 }
 
-.industry_select input.ui-select-search.input-xs::-webkit-input-placeholder { font-size: 16px; line-height: 2;}
-.industry_select input.ui-select-search.input-xs::-moz-placeholder  { font-size: 16px; line-height: 2;}
-.industry_select input.ui-select-search.input-xs:-ms-input-placeholder { font-size: 16px; line-height: 2;}
+.industry_select input.ui-select-search.input-xs::-webkit-input-placeholder { font-size: 18px; line-height: 1.6;}
+.industry_select input.ui-select-search.input-xs::-moz-placeholder  { font-size: 18px; line-height: 1.6;}
+.industry_select input.ui-select-search.input-xs:-ms-input-placeholder { font-size: 18px; line-height: 1.6;}
 
 .industry_select span.ui-select-match-item.btn.btn-default.btn-xs {
   font-size: 14px;
