--- a/app/components/resources/resource.add.html
+++ b/app/components/resources/resource.add.html
@@ -14,53 +14,69 @@
 
                 <div class="row">
                     <div class="col-lg-3 text-center">
-                        <img ng-show="!add.loadimg" style="height:75px;" ngf-thumbnail="add.selectedCompany.avatar || avatar || '/public/images/blank_startup.jpg'">
-                        <h4 style="font-weight: 400;" ng-show="add.update" ng-bind-html="::add.community.profile.name"></h4>
+                        <img ng-show="!add.loadimg" style="height:150px;" ngf-thumbnail="add.selectedCompany.avatar || avatar || '/public/images/browser_icon.jpg'">
+                        <h4 class="w400" ng-show="add.update" ng-bind-html="::add.community.profile.name"></h4>
                         <br/>
-                        <label id="uploader_text">
+                        <label class="uploader_text">
                             <input type="file" ng-model="avatar" name="file" ngf-pattern="'image/*'"
                                    accept="image/*" ngf-max-size="2MB" ngf-min-height="50"
-                                   ngf-resize="{width: 75, height: 75}" ngf-select="add.uploadLogo($file)" style="display:none;"/>
-                            <h6>Change thumbnail..<br/>(75x75)</h6>
+                                   ngf-resize="{width: 150, height: 150}" ngf-select="add.uploadLogo($file)" style="display:none;"/>
+                            <h6>
+
+                                Change thumbnail..
+                                <br/>(square)
+
+                            </h6>
                         </label>
                     </div>
                     <div class="col-lg-9">
                         <div class="row">
                             <div class="form-group col-lg-12">
-                                <h4 style="font-weight: 400;">
+                                <h4 class="w400">
+
                                     Resource name:
+
                                 </h4>
-                                <input type="text" placeholder="Type the resource name.." ng-model="add.selectedCompany.name" ng-model-options="{ debounce: 250, blur: 0 }" class="form-control input-lg">
+                                <input type="text" placeholder="Type the resource name.." ng-model="add.selectedCompany.name" class="form-control input-lg">
                             </div>
                             <div class="form-group col-lg-6">
-                                <h4 style="font-weight: 400;">
-                                    What type of resource is this?
+                                <h4 class="w400">
+
+                                    Short headline:
+
                                 </h4>
-                                <ui-select class="industry_select" multiple="multiple" ng-model="add.selectedCompany.resource_types" ng-disabled="disabled">
-                                    <ui-select-match placeholder="College, Acclerator, etc">{{$item}}</ui-select-match>
+                                <input type="text" placeholder="The best place to meet and work.." ng-model="add.selectedCompany.headline" class="form-control input-lg">
+                            </div>
+                            <div class="form-group col-lg-6">
+                                <h4 class="w400">
+
+                                    Website:
+
+                                </h4>
+                                <input type="text" placeholder="www.meetup.com" ng-model="add.selectedCompany.website" class="form-control input-lg">
+                            </div>
+                            <div class="form-group col-lg-6">
+                                <h4 class="w400">
+
+                                    What type of resource is this?
+
+                                </h4>
+                                <ui-select class="industry_select form-control input-lg" multiple="multiple" ng-model="add.selectedCompany.resource_types" ng-disabled="disabled">
+                                    <ui-select-match placeholder="College, Accelerator, etc">{{$item}}</ui-select-match>
                                     <ui-select-choices repeat="p in add.resource_types | filter: $select.search">
                                         <div ng-bind-html="p | highlight: $select.search"></div>
                                     </ui-select-choices>
                                 </ui-select>
                             </div>
                             <div class="form-group col-lg-6">
-                                <h4 style="font-weight: 400;">
+                                <h4 class="w400">
+
                                     Select a primary industry:
+
                                 </h4>
-                                <select class="form-control m-b" ng-model="add.selectedCompany.parent" style="margin-bottom: 5px;" required>
+                                <select class="form-control input-md" ng-model="add.selectedCompany.parent" style="margin-bottom: 5px;" required>
                                     <option ng-repeat="parent in add.parents">{{ ::parent }}</option>
                                 </select>
-                            </div>
-                            <div class="form-group col-lg-6">
-                                <h4 style="font-weight: 400;">
-                                    Your role is:
-                                </h4>
-                                <select class="form-control m-b" ng-model="add.selectedRole" ng-options="r.value as r.text for r in add.selectRoles"></select>
-                            </div>
-                            <div class="form-group col-lg-6">
-                                <h4>Customize the url path:</h4>
-                                <input type="text" class="form-control input-lg" placeholder="{{ add.encode(add.selectedCompany.name) }}" ng-model="add.selectedCompany.url" style="margin-bottom: 5px;">
-                                <em>Your url will be: https://startupcommunity.org/{{ add.location.key }}/<strong><span style="text-transform: lowercase;">{{ add.encode(add.selectedCompany.url || add.selectedCompany.name) }}</span></strong></em>
                             </div>
                         </div>
                     </div>
@@ -71,118 +87,81 @@
             <div ng-show="add.step == 2" class="p-m">
 
                 <div class="row">
-                    <div class="form-group col-lg-12">
-                        <h4 style="font-weight: 400;">
-                            Street address:
-                        </h4>
-                        <input type="text" placeholder="1 Infinity Way.." ng-model="add.selectedCompany.street" class="form-control input-lg">
+                    <div class="col-lg-3 text-center">
+                        <img ng-show="!add.loadimg" style="height:150px;" ngf-thumbnail="add.selectedCompany.avatar || avatar || '/public/images/browser_icon.jpg'">
+                        <h4 class="w400" ng-show="add.update" ng-bind-html="::add.community.profile.name"></h4>
+                        <br/>
+                        <label class="uploader_text">
+                            <input type="file" ng-model="avatar" name="file" ngf-pattern="'image/*'"
+                                   accept="image/*" ngf-max-size="2MB" ngf-min-height="50"
+                                   ngf-resize="{width: 150, height: 150}" ngf-select="add.uploadLogo($file)" style="display:none;"/>
+                            <h6>Change thumbnail..<br/>(square)</h6>
+                        </label>
                     </div>
-                    <div class="col-lg-6">
-                        <div class="row">
-                            <div class="form-group col-lg-6">
-                                <h4 style="font-weight: 400;">
-                                    City:
-                                </h4>
-                                <input type="text" placeholder="{{ add.location.profile.city }}" ng-model="add.selectedCompany.city" class="form-control input-lg">
-                            </div>
-                            <div class="form-group col-lg-6">
-                                <h4 style="font-weight: 400;">
-                                    State:
-                                </h4>
-                                <input type="text" placeholder="{{ add.location.profile.state }}" ng-model="add.selectedCompany.state" class="form-control input-lg">
-                            </div>
-                            <div class="form-group col-lg-6">
-                                <h4 style="font-weight: 400;">
-                                    Your role is:
-                                </h4>
-                                <select class="form-control m-b" ng-model="add.selectedRole" ng-options="r.value as r.text for r in add.selectRoles"></select>
-                            </div>
-                            <div class="form-group col-lg-6">
-                                <h4>Customize the url path:</h4>
-                                <input type="text" class="form-control input-lg" placeholder="{{ add.encode(add.selectedCompany.name) }}" ng-model="add.selectedCompany.url" style="margin-bottom: 5px;">
-                                <em>Your url will be: https://startupcommunity.org/{{ add.location.key }}/<strong><span style="text-transform: lowercase;">{{ add.encode(add.selectedCompany.url || add.selectedCompany.name) }}</span></strong></em>
-                            </div>
+                    <div class="col-lg-9">
+                        <div class="form-group col-lg-6">
+                            <h4 class="w400">
+
+                                Street:
+
+                            </h4>
+                            <input type="text" placeholder="1 Infinity Way.." ng-model="add.selectedCompany.street" class="form-control input-lg">
                         </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="row">
-                            <div class="form-group col-lg-12">
-                                <h4 style="font-weight: 400;">
-                                    Resource name:
-                                </h4>
-                                <input type="text" placeholder="Type the resource name.." ng-model="add.selectedCompany.name" ng-model-options="{ debounce: 250, blur: 0 }" class="form-control input-lg">
-                            </div>
-                            <div class="form-group col-lg-6">
-                                <h4 style="font-weight: 400;">
-                                    What type of resource is this?
-                                </h4>
-                                <ui-select class="industry_select" multiple="multiple" ng-model="add.selectedCompany.resource_types" ng-disabled="disabled">
-                                    <ui-select-match placeholder="College, Acclerator, etc">{{$item}}</ui-select-match>
-                                    <ui-select-choices repeat="p in add.resource_types | filter: $select.search">
-                                        <div ng-bind-html="p | highlight: $select.search"></div>
-                                    </ui-select-choices>
-                                </ui-select>
-                            </div>
-                            <div class="form-group col-lg-6">
-                                <h4 style="font-weight: 400;">
-                                    Select a primary industry:
-                                </h4>
-                                <select class="form-control m-b" ng-model="add.selectedCompany.parent" style="margin-bottom: 5px;" required>
-                                    <option ng-repeat="parent in add.parents">{{ ::parent }}</option>
-                                </select>
-                            </div>
-                            <div class="form-group col-lg-6">
-                                <h4 style="font-weight: 400;">
-                                    Your role is:
-                                </h4>
-                                <select class="form-control m-b" ng-model="add.selectedRole" ng-options="r.value as r.text for r in add.selectRoles"></select>
-                            </div>
-                            <div class="form-group col-lg-6">
-                                <h4>Customize the url path:</h4>
-                                <input type="text" class="form-control input-lg" placeholder="{{ add.encode(add.selectedCompany.name) }}" ng-model="add.selectedCompany.url" style="margin-bottom: 5px;">
-                                <em>Your url will be: https://startupcommunity.org/{{ add.location.key }}/<strong><span style="text-transform: lowercase;">{{ add.encode(add.selectedCompany.url || add.selectedCompany.name) }}</span></strong></em>
-                            </div>
+                        <div class="form-group col-lg-3">
+                            <h4 class="w400">
+
+                                City:
+
+                            </h4>
+                            <input type="text" ng-model="add.selectedCompany.city" class="form-control input-lg">
+                        </div>
+                        <div class="form-group col-lg-3">
+                            <h4 class="w400">
+
+                                State:
+
+                            </h4>
+                            <input type="text" ng-model="add.selectedCompany.state" class="form-control input-lg">
+                        </div>
+                        <div class="form-group col-lg-6">
+                            <h4 class="w400">
+
+                                Your role is:
+
+                            </h4>
+                            <select class="form-control input-md" ng-model="add.selectedRole" ng-options="r.value as r.text for r in add.selectRoles"></select>
+                        </div>
+                        <div class="form-group col-lg-6">
+                            <h4 class="w400">
+
+                                Customize the url path:
+
+                            </h4>
+                            <input type="text" class="form-control input-md" placeholder="{{ add.encode(add.selectedCompany.name || '') }}" ng-model="add.selectedCompany.url" style="margin-bottom: 5px;">
+                        </div>
+                        <div class="col-lg-12">
+                            <h4 class="w400">
+
+                                Click below to edit the summary:
+                            </h4>
+                            <div summernote class="summernote" ng-model="product_desc" airMode></div>
                         </div>
                     </div>
                 </div>
 
             </div>
+
+            <div alert-box this-alert="add.alert" style="padding-top:10px;"></div>
+
+            <button ladda="add.working" class="ladda-button btn btn-danger pull-left" data-style="zoom-in" data-spinner-size="25" ng-click="add.deleteCompany(add.community.key)" ng-show="add.update && !add.alert">Delete {{::add.community.profile.name || 'Resource'}}</button>
 
             <div class="text-right m-t-xs">
                 <button ng-click="add.wizard.prev()" ng-disabled="add.step == 1" class="btn btn-default">Previous</button>
                 <button ng-click="add.wizard.next()" ng-disabled="add.step == 2" ng-hide="add.step == 2" class="btn btn-default">Next</button>
-                <button ng-click="add.submit()" ng-show="add.step == 2" class="btn btn-success">Submit</button>
+                <input ladda="add.working" class="ladda-button finish btn-success btn" data-style="zoom-in" data-spinner-size="25" ng-show="add.step == 2" ng-click="add.addCompany($event, true)" type="submit" ng-class="{'disabled' : disabled || add.working || !add.selectedCompany}" value="{{ (add.updateCompany ? 'Update ' : 'Add ') + (add.selectedCompany.name || 'Resource') }}"/>
             </div>
 
         </form>
 
-        <div style="padding: 20px;">
-
-
-            <div>
-
-                <div style="padding-top: 10px;">
-                    <h4 style="line-height:1.75;">
-
-                        Click below to edit the summary:
-
-                        <div class="summary_form">
-                            <a editable-textarea="add.selectedCompany.product_desc" e-rows="8" e-cols="60">
-                                <pre style="background: none; font-family: inherit; font-size: 14px; text-align: left;">{{add.selectedCompany.product_desc || 'Nothing here!'}}</pre>
-                            </a>
-                        </div>
-
-                    </h4>
-                </div>
-            </div>
-        </div>
     </div>
-
-    <div alert-box this-alert="add.alert" style="padding-top:10px;"></div>
-
-    <button ladda="add.working" class="ladda-button btn btn-danger pull-left" data-style="zoom-in" data-spinner-size="25" ng-click="add.deleteCompany(add.community.key)" ng-show="add.update && !add.alert">Delete {{::add.community.profile.name || 'Resource'}}</button>
-    <input ladda="add.working" class="ladda-button finish btn-success btn pull-right" data-style="zoom-in" data-spinner-size="25" ng-show="!add.updated" ng-click="add.addCompany($event, true)" type="submit" ng-class="{'disabled' : disabled || add.working || !add.selectedCompany}" value="{{ (add.updateCompany ? 'Update ' : 'Add ') + (add.selectedCompany.name || 'Resource') }}"/>
-    <button type="button" class="btn btn-default pull-right" style="margin-right: 15px;" ng-show="add.selectedCompany && !add.working && !add.update" ng-click="add.selectedCompany = undefined; add.company = undefined; add.alert = undefined; add.updateRole = false; add.selectedRole = 'none'; add.updateCompany = false; add.submitted = false; add.notlisted = false; add.dups = undefined;">Clear Form
-    </button>
-
 </div>
