--- a/app/components/welcome/welcome.companies.html
+++ b/app/components/welcome/welcome.companies.html
@@ -5,10 +5,10 @@
     <div ng-show="welcome.selectedCompany || welcome.company" style="text-align:center;">
         <a href="{{welcome.selectedCompany.angellist_url}}" target="_blank" title="{{welcome.selectedCompany.name}}'s AngelList Profile">
             <img style="height:75px;"
-             ngf-thumbnail="welcome.selectedCompany.thumb_url || logo_thumbnail || '/public/images/blank_startup.jpg'">
+             ngf-thumbnail="welcome.selectedCompany.thumb_url || logo_thumbnail || '/public/images/browser_icon.jpg'">
         </a>
         <br/>
-        <label id="uploader_text">
+        <label class="uploader_text">
             <input type="file" ng-model="logo_thumbnail" name="file" ngf-pattern="'image/*'"
                    accept="image/*" ngf-max-size="2MB" ngf-min-height="50"
                    ngf-resize="{width: 75, height: 75}" ngf-select="welcome.uploadLogo($file)" style="display:none;"/>
