--- a/app/components/resources/resource.add.html
+++ b/app/components/resources/resource.add.html
@@ -37,7 +37,7 @@
                                     Resource name:
 
                                 </h4>
-                                <input type="text" placeholder="Type the resource name.." ng-model="add.selectedCompany.name" class="form-control input-lg">
+                                <input type="text" placeholder="Type the resource name.." ng-model="add.selectedCompany.name" ng-model-options="{ debounce: 250, blur: 0 }" class="form-control input-lg">
                             </div>
                             <div class="form-group col-lg-6">
                                 <h4 class="w400">
