--- a/app/components/resources/resource.add.html
+++ b/app/components/resources/resource.add.html
@@ -34,7 +34,7 @@
                             <div class="form-group col-lg-12">
                                 <h4 class="w400">
 
-                                    Resource name:
+                                    Name of the resource:
 
                                 </h4>
                                 <input type="text" placeholder="Type the resource name.." ng-model="add.selectedCompany.name" ng-model-options="{ debounce: 250, blur: 0 }" class="form-control input-lg">
@@ -105,7 +105,7 @@
                                 Street:
 
                             </h4>
-                            <input type="text" placeholder="1 Infinity Way.." ng-model="add.selectedCompany.street" class="form-control input-lg">
+                            <input type="text" ng-model="add.selectedCompany.street" class="form-control input-lg">
                         </div>
                         <div class="form-group col-lg-3">
                             <h4 class="w400">
@@ -138,7 +138,7 @@
 
                             </h4>
                             <input type="text" class="form-control input-md" placeholder="{{ add.encode(add.selectedCompany.name || '') }}" ng-model="add.selectedCompany.url" style="margin-bottom: 5px;">
-                            <em style="font-size: 11px;" class="pull-right">Your path will be: /{{ add.location.key }}/<strong><span style="text-transform: lowercase;">{{ add.encode(add.selectedCompany.url || add.selectedCompany.name) }}</span></strong></em>
+                            <em style="font-size: 11px;" class="pull-right">The path will be: /{{ add.location.key }}/<strong><span style="text-transform: lowercase;">{{ add.encode(add.selectedCompany.url || add.selectedCompany.name) }}</span></strong></em>
                         </div>
                         <div class="col-lg-12" style="margin-top:-10px;">
                             <h4 class="w400">
