--- a/app/components/resources/resource.add.html
+++ b/app/components/resources/resource.add.html
@@ -9,8 +9,7 @@
 
         <form>
 
-
-            <div ng-show="add.step == 1"  class="p-m">
+            <div class="p-m">
 
                 <div class="row">
                     <div class="col-lg-3 text-center">
@@ -30,7 +29,7 @@
                         </label>
                     </div>
                     <div class="col-lg-9">
-                        <div class="row">
+                        <div ng-show="add.step == 1">
                             <div class="form-group col-lg-12">
                                 <h4 class="w400">
 
@@ -45,7 +44,7 @@
                                     Short headline:
 
                                 </h4>
-                                <input type="text" placeholder="The best place to meet and work.." ng-model="add.selectedCompany.headline" class="form-control input-lg">
+                                <input type="text" placeholder="The best place to meet and work.." ng-model="add.selectedCompany.high_concept" class="form-control input-lg">
                             </div>
                             <div class="form-group col-lg-6">
                                 <h4 class="w400">
@@ -79,77 +78,58 @@
                                 </select>
                             </div>
                         </div>
-                    </div>
-                </div>
+                        <div ng-show="add.step == 2">
+                            <div class="form-group col-lg-6">
+                                <h4 class="w400">
 
-            </div>
+                                    Street:
 
-            <div ng-show="add.step == 2" class="p-m">
+                                </h4>
+                                <input type="text" ng-model="add.selectedCompany.street" class="form-control input-lg">
+                            </div>
+                            <div class="form-group col-lg-3">
+                                <h4 class="w400">
 
-                <div class="row">
-                    <div class="col-lg-3 text-center">
-                        <img ng-show="!add.loadimg" style="height:150px;" ngf-thumbnail="add.selectedCompany.avatar || avatar || '/public/images/browser_icon.jpg'">
-                        <h4 class="w400" ng-show="add.update" ng-bind-html="::add.community.profile.name"></h4>
-                        <br/>
-                        <label class="uploader_text">
-                            <input type="file" ng-model="avatar" name="file" ngf-pattern="'image/*'"
-                                   accept="image/*" ngf-max-size="2MB" ngf-min-height="50"
-                                   ngf-resize="{width: 150, height: 150}" ngf-select="add.uploadLogo($file)" style="display:none;"/>
-                            <h6>Change thumbnail..<br/>(square)</h6>
-                        </label>
-                    </div>
-                    <div class="col-lg-9">
-                        <div class="form-group col-lg-6">
-                            <h4 class="w400">
+                                    City:
 
-                                Street:
+                                </h4>
+                                <input type="text" ng-model="add.selectedCompany.city" class="form-control input-lg">
+                            </div>
+                            <div class="form-group col-lg-3">
+                                <h4 class="w400">
 
-                            </h4>
-                            <input type="text" ng-model="add.selectedCompany.street" class="form-control input-lg">
-                        </div>
-                        <div class="form-group col-lg-3">
-                            <h4 class="w400">
+                                    State:
 
-                                City:
+                                </h4>
+                                <input type="text" ng-model="add.selectedCompany.state" class="form-control input-lg">
+                            </div>
+                            <div class="form-group col-lg-6">
+                                <h4 class="w400">
 
-                            </h4>
-                            <input type="text" ng-model="add.selectedCompany.city" class="form-control input-lg">
-                        </div>
-                        <div class="form-group col-lg-3">
-                            <h4 class="w400">
+                                    Your role is:
 
-                                State:
+                                </h4>
+                                <select class="form-control input-md" ng-model="add.selectedRole" ng-options="r.value as r.text for r in add.selectRoles"></select>
+                            </div>
+                            <div class="form-group col-lg-6">
+                                <h4 class="w400">
 
-                            </h4>
-                            <input type="text" ng-model="add.selectedCompany.state" class="form-control input-lg">
-                        </div>
-                        <div class="form-group col-lg-6">
-                            <h4 class="w400">
+                                    Customize the url path:
 
-                                Your role is:
+                                </h4>
+                                <input type="text" class="form-control input-md" placeholder="{{ add.encode(add.selectedCompany.name || '') }}" ng-model="add.selectedCompany.url" style="margin-bottom: 5px;">
+                                <em style="font-size: 11px;" class="pull-right">The path will be: /{{ add.location.key }}/<strong><span style="text-transform: lowercase;">{{ add.encode(add.selectedCompany.url || add.selectedCompany.name) }}</span></strong></em>
+                            </div>
+                            <div class="col-lg-12" style="margin-top:-10px;">
+                                <h4 class="w400">
 
-                            </h4>
-                            <select class="form-control input-md" ng-model="add.selectedRole" ng-options="r.value as r.text for r in add.selectRoles"></select>
-                        </div>
-                        <div class="form-group col-lg-6">
-                            <h4 class="w400">
-
-                                Customize the url path:
-
-                            </h4>
-                            <input type="text" class="form-control input-md" placeholder="{{ add.encode(add.selectedCompany.name || '') }}" ng-model="add.selectedCompany.url" style="margin-bottom: 5px;">
-                            <em style="font-size: 11px;" class="pull-right">The path will be: /{{ add.location.key }}/<strong><span style="text-transform: lowercase;">{{ add.encode(add.selectedCompany.url || add.selectedCompany.name) }}</span></strong></em>
-                        </div>
-                        <div class="col-lg-12" style="margin-top:-10px;">
-                            <h4 class="w400">
-
-                                Click below to edit the summary:
-                            </h4>
-                            <div summernote class="summernote" ng-model="add.selectedCompany.product_desc" ng-model-options="{ debounce: 250, blur: 0 }" style="min-height: 34px;"airMode></div>
+                                    Click below to edit the summary:
+                                </h4>
+                                <div summernote class="summernote" ng-model="add.selectedCompany.product_desc" ng-model-options="{ debounce: 250, blur: 0 }" style="min-height: 34px;"airMode></div>
+                            </div>
                         </div>
                     </div>
                 </div>
-
             </div>
 
             <div alert-box this-alert="add.alert" style="padding-top:10px;"></div>
@@ -158,8 +138,8 @@
 
             <div class="text-right m-t-xs">
                 <button ng-click="add.wizard.prev()" ng-disabled="add.step == 1" class="btn btn-default">Previous</button>
-                <button ng-click="add.wizard.next()" ng-disabled="add.step == 2" ng-hide="add.step == 2" class="btn btn-default">Next</button>
-                <input ladda="add.working" class="ladda-button finish btn-success btn" data-style="zoom-in" data-spinner-size="25" ng-show="add.step == 2" ng-click="add.addCompany($event, true)" type="submit" ng-class="{'disabled' : disabled || add.working || !add.selectedCompany}" value="{{ (add.updateCompany ? 'Update ' : 'Add ') + (add.selectedCompany.name || 'Resource') }}"/>
+                <button ng-click="add.wizard.next()" ng-disabled="!add.selectedCompany.resource_types.length || !add.selectedCompany.name || !add.selectedCompany.parent" ng-hide="add.step == 2" class="btn btn-success">Next</button>
+                <input ladda="add.working" class="ladda-button finish btn-success btn" data-style="zoom-in" data-spinner-size="25" ng-show="add.step == 2" ng-click="add.addCompany($event, true)" type="submit" value="{{ (add.updateCompany ? 'Update ' : 'Add ') + (add.selectedCompany.name || 'Resource') }}"/>
             </div>
 
         </form>
