--- a/app/components/companies/company.list.html
+++ b/app/components/companies/company.list.html
@@ -26,7 +26,7 @@
             <div class="hpanel hgreen">
                 <div class="panel-footer top" style="font-size: 17px;">
                     <strong>Stage</strong> Filters
-                    <div loading-bars ng-show="users.loadingStage" style="display: inline;"></div>
+                    <div loading-bars ng-show="companies.loadingStage" style="display: inline;"></div>
                 </div>
                 <div class="panel-body filternav">
 
